--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       TODO 6
       add a <form> here for users to search for movies by title 
       -->
+      <form id=titleSearch>
+        <input type="input" name="q"></input>
+        <input type="submit" value="Search by Title"></input>
+      </form>
 
     </header>
 
@@ -40,20 +44,20 @@
   <script src="js/flicklist.js"></script>
 
   <script>
-    // TODO 8
+    // TODO 8a
     // fill in the missing pieces of the code below
 
-    $("TODO 8a").submit(function(evt) {
+    $("#titleSearch").submit(function(evt) {
 
       // first, we cancel the default action (which would leave the page)
       evt.preventDefault();
 
-      // figure out what the user typed
-      var searchTerm = $("TODO 8b").val();
+      // figure out what the user typed TODO 8b
+      var searchTerm = $("#q").val();
 
       // TODO 8c invoke the searchMovies function,
       // passing in the search term, and render as the callback
-
+      searchMovies(searchTerm, render);
     });
   </script>
 
